--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,5 @@
-@import url(./_fonts.scss);
-@import url(./_generals.scss);
-@import url(./_mixins.scss);
-@import url(./_normalize.scss);
-@import url(./_variables.scss);
-@import url(./blocks/_blocks.scss);
+@import "./fonts";
+@import "./generals";
+@import "./variables";
+@import "./mixins";
+@import "./blocks/blocks";
