--- a/css/main.css
+++ b/css/main.css
@@ -2,25 +2,30 @@
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
-  src: local(""), url("../fonts/poppins-v20-latin-regular.woff2") format("woff2"), url("../fonts/poppins-v20-latin-regular.woff") format("woff");
+  src: local(""),
+    url("../fonts/poppins-v20-latin-regular.woff2") format("woff2"),
+    url("../fonts/poppins-v20-latin-regular.woff") format("woff");
 }
 @font-face {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
-  src: local(""), url("../fonts/poppins-v20-latin-500.woff2") format("woff2"), url("../fonts/poppins-v20-latin-500.woff") format("woff");
+  src: local(""), url("../fonts/poppins-v20-latin-500.woff2") format("woff2"),
+    url("../fonts/poppins-v20-latin-500.woff") format("woff");
 }
 @font-face {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
-  src: local(""), url("../fonts/poppins-v20-latin-600.woff2") format("woff2"), url("../fonts/poppins-v20-latin-600.woff") format("woff");
+  src: local(""), url("../fonts/poppins-v20-latin-600.woff2") format("woff2"),
+    url("../fonts/poppins-v20-latin-600.woff") format("woff");
 }
 @font-face {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("../fonts/poppins-v20-latin-700.woff2") format("woff2"), url("../fonts/poppins-v20-latin-700.woff") format("woff");
+  src: local(""), url("../fonts/poppins-v20-latin-700.woff2") format("woff2"),
+    url("../fonts/poppins-v20-latin-700.woff") format("woff");
 }
 *,
 *::after,
@@ -37,7 +42,7 @@ body {
 .visually-hidden {
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(50%);
-          clip-path: inset(50%);
+  clip-path: inset(50%);
   height: 1px;
   overflow: hidden;
   position: absolute;
@@ -48,4 +53,75 @@ body {
 .container {
   max-width: 1152px;
   padding: 0 20px;
-}/*# sourceMappingURL=main.css.map */
+}
+
+.easy__list {
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.easy__title {
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  max-width: 348px;
+  height: 48px;
+}
+
+.easy__info {
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  max-width: 542px;
+  height: 52px;
+}
+
+.easy__list-item-img {
+  max-width: 98px;
+  height: 98px;
+  margin-right: 45px;
+}
+
+.easy__list-item-title {
+  font-size: 16px;
+  line-height: 24px;
+  color: #2f281e;
+  background: #ffffff;
+  box-shadow: 0px 2px 15px rgba(23, 58, 86, 0.1);
+  border-radius: 26.5px;
+  padding: 15px 24px;
+  width: 274px;
+  height: 53px;
+}
+
+.easy__list-item-title::after {
+  background: red;
+  box-shadow: 0px 2px 15px rgba(23, 58, 86, 0.1);
+  border-radius: 26.5px;
+}
+
+.easy__list-item-link {
+  background: #02897a;
+  border-radius: 4px;
+  max-width: 216px;
+  height: 53px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+  padding: 15px 30px;
+  text-decoration: none;
+  display: none;
+}
+
+.easy__list-item-link:hover {
+  background-color: transparent;
+  color: #00ffff;
+  cursor: pointer;
+}
+
+.easy__list-items-wrapper {
+  display: flex;
+  flex-direction: row-reverse;
+} /*# sourceMappingURL=main.css.map */
