--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -1,4 +1,5 @@
-@import "./header";
 @import "./container";
-@import "./easy";
+@import "./header";
 @import "./intro";
+@import "./easy";
+@import "./clients";
